# clock

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
.github/workflows/: cmake-single-platform.yml
bg/: b1.h  b2.h  b3.h  b4.h  b5.h  b6.h  b7.h  bg.psd  flowerD.h  girl.h  montain.h  space.h  w1.h  w2.h  w3.h  w4.h  w5.h  w6.h  w7.h  w8.h  watch.h  windows_xp.h
simlcd/: CMakeLists.txt  simlcd.cpp  simlcd.h
